--- a/index.html
+++ b/index.html
@@ -5,23 +5,33 @@
     <title>conch</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="stylesheet" media="screen" href="https://at.alicdn.com/t/font_1568367_77ce2gss9bp.css">
+    <link rel="stylesheet" media="screen" href="https://at.alicdn.com/t/font_1568367_9rektsyk4s5.css">
     <link rel="stylesheet" media="screen" href="assets/css/reset.css">
 </head>
 <body>
 
 <header class="header">
-    <a class="nav iconfont icon-close"></a>
-    <a class="nav iconfont icon-subtract"></a>
+    <a class="nav iconfont icon-add" onclick="location.reload();"></a>
+    <a class="nav iconfont icon-workspace"></a>
     <nav>
-        <a class="nav iconfont icon-add"></a>
-        <a class="nav iconfont icon-notebook"></a>
         <a class="nav iconfont icon-more"></a>
+        <a class="nav iconfont icon-subtract" data-act="min"></a>
+        <a class="nav iconfont icon-close" data-act="close"></a>
     </nav>
 </header>
 
 <div class="content">
-    
+
+    <section class="section">
+        <span class="title">Untitled</span>
+        <div class="editor" contenteditable></div>
+    </section>
+
+    <section class="section">
+        <span class="title">未命名</span>
+        <div class="editor" contenteditable></div>
+    </section>
+
 </div>
 
 <footer class="footer">
