--- a/index.html
+++ b/index.html
@@ -23,19 +23,17 @@
 <div class="content">
 
     <section class="section">
-        <span class="title">Untitled</span>
         <div class="editor" contenteditable></div>
     </section>
 
     <section class="section">
-        <span class="title">未命名</span>
         <div class="editor" contenteditable></div>
     </section>
 
 </div>
 
 <footer class="footer">
-
+    <a class="btn">保存</a>
 </footer>
 
 <script src="assets/js/core.js"></script>
