--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 <body>
 
 <header class="header">
-    <a class="nav iconfont icon-tree" href=""></a>
-    <div class="dropdown">
-        <a class="nav iconfont icon-add"></a>
-        <div class="context">
-            <a class="li">目录 1</a>
-            <a class="li">目录 2</a>
-        </div>
-    </div>
-    <a class="nav iconfont icon-color"></a>
+    <a class="nav iconfont icon-close" data-act="close"></a>
+    <a class="nav iconfont icon-subtract" data-act="min"></a>
     <nav>
+        <a class="nav iconfont icon-tree" href=""></a>
+        <div class="dropdown">
+            <a class="nav iconfont icon-add"></a>
+            <div class="context leftward">
+                <a class="li">目录 1</a>
+                <a class="li">目录 2</a>
+            </div>
+        </div>
         <div class="dropdown">
             <a class="nav iconfont icon-more"></a>
             <div class="context leftward">
@@ -30,8 +31,6 @@
                 </a>
             </div>
         </div>
-        <a class="nav iconfont icon-subtract" data-act="min"></a>
-        <a class="nav iconfont icon-close" data-act="close"></a>
     </nav>
 </header>
 
