--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
     </div>
     <nav>
+        <a class="nav iconfont icon-save" data-act="save"></a>
         <div class="dropdown">
             <a class="nav iconfont icon-add"></a>
             <div class="context leftward">
