--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a class="nav iconfont icon-add"></a>
             <div class="context leftward">
                 <a>关于</a>
+                <a>意见反馈</a>
                 <a>版本号</a>
             </div>
         </div>
@@ -31,53 +32,12 @@
 <div class="body">
     <div class="content">
         <aside class="sidebar">
-            <ul class="menu">
-                <li>
-                    <a class="li">
-                        <b>未命名</b>
-                        <i class="tgl-close"></i>
-                    </a>
-                </li>
-                <li>
-                    <a class="li">
-                        <b>挪威的森林</b>
-                        <i class="tgl-close"></i>
-                    </a>
-                    <ul class="active">
-                        <li>
-                            <a class="li" data-id="1">
-                                <b>第一章</b>
-                                <i class="tgl-close"></i>
-                            </a>
-                            <ul>
-                                <li>
-                                    <a class="li">
-                                        <b>第一节</b>
-                                        <i class="tgl-close"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a class="li">
-                                <b>第二章</b>
-                                <i class="tgl-close"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="li">
-                        <b>飘 Gone with the wind</b>
-                        <i class="tgl-close"></i>
-                    </a>
-                </li>
-            </ul>
+            <ul class="menu"></ul>
         </aside>
     
-        <section class="section">
+        <!-- <section class="section">
             <div class="editor" contenteditable></div>
-        </section>
+        </section> -->
 
     </div>
 
