--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
     <title>conch</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,minimum-scale=1">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="stylesheet" media="screen" href="https://at.alicdn.com/t/font_1568367_67y4lmlct7d.css">
-    <link rel="stylesheet" media="screen" href="assets/css/default.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1568367_gwztr4kvv3o.css">
+    <link rel="stylesheet" href="assets/css/default.css">
+
+    <!-- theme css -->
+    <link rel="stylesheet" href="assets/css/sketch.css">
+    
 </head>
 <body>
 
 <header class="header">
     <a class="nav iconfont icon-close" data-act="exit"></a>
     <a class="nav iconfont icon-subtract" data-act="min"></a>
-    <a class="nav iconfont icon-sidebar" data-act="sidebar"></a>
     <nav>
-        <a class="nav iconfont icon-task" data-act="task"></a>
+        <a class="nav iconfont icon-sidebar" data-act="sidebar"></a>
+        <a class="nav iconfont icon-read" data-act="read"></a>
+        <a class="nav iconfont icon-draft" data-act="draft"></a>
+        <a class="nav iconfont icon-add" href=""></a>
+        <a class="nav iconfont icon-setting" data-act="setting"></a>
         <div class="dropdown" data-act="dropdown">
-            <a class="nav iconfont icon-add"></a>
+            <a class="nav iconfont icon-more"></a>
             <div class="context leftward">
                 <a>关于</a>
                 <a>意见反馈</a>
                 <a>版本号</a>
             </div>
         </div>
-        <a class="nav iconfont icon-setting" data-act="setting"></a>
-        <a class="nav iconfont icon-more" href=""></a>
     </nav>
 </header>
 
@@ -34,28 +39,32 @@
         <aside class="sidebar">
             <ul class="menu"></ul>
         </aside>
+
+        <div class="widen"></div>
     
-        <!-- <section class="section">
+        <section class="section">
             <div class="editor" contenteditable></div>
-        </section> -->
+        </section>
 
-    </div>
-
-    <div class="confirm">
-        <header>关闭前，请确认以下文件尚未保存：</header>
-        <p>挪威的森林</p>
-        <p>未命名</p>
-        <footer>
-            <a class="btn dimed">取消</a>
-            <a class="btn">关闭并保存</a>
-        </footer>
     </div>
 
 </div>
 
-<div class="contextmenu">
-    <a data-act="save">保存</a>
-    <a data-act="remove">删除</a>
+<div class="backdrop dismiss"><div class="contextmenu"></div></div>
+
+<div class="backdrop">
+    <div class="confirm">
+        <header>确认框</header>
+        <p>以下文件未保存：</p>
+        <ul>
+            <li>森林</li>
+        </ul>
+        <footer>
+            <a data-act="0">取消</a>
+            <a data-act="1">不保存</a>
+            <a data-act="2">保存并关闭</a>
+        </footer>
+    </div>
 </div>
 
 <!-- <footer class="footer">
