--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
     <a class="nav iconfont icon-close" data-act="exit"></a>
     <a class="nav iconfont icon-subtract" data-act="min"></a>
     <nav>
+        <a class="nav iconfont icon-add" data-act="add"></a>
+        <a class="nav iconfont icon-draft" data-act="draft" href=""></a>
         <a class="nav iconfont icon-sidebar" data-act="sidebar"></a>
         <a class="nav iconfont icon-read" data-act="read"></a>
-        <a class="nav iconfont icon-draft" data-act="draft"></a>
-        <a class="nav iconfont icon-add" href=""></a>
-        <a class="nav iconfont icon-setting" data-act="setting"></a>
-        <div class="dropdown" data-act="dropdown">
-            <a class="nav iconfont icon-more"></a>
+        <!-- <div class="dropdown" data-act="dropdown">
+            <a class="nav iconfont icon-add"></a>
             <div class="context leftward">
-                <a>关于</a>
-                <a>意见反馈</a>
-                <a>版本号</a>
+                <a>普通文本</a>
+                <a>富文本编辑</a>
             </div>
-        </div>
+        </div> -->
+        <a class="nav iconfont icon-setting" data-act="setting"></a>
     </nav>
 </header>
 
@@ -71,6 +70,6 @@
     <a class="btn"><span>保存</span></a>
 </footer> -->
 
-<script src="assets/js/core.js"></script>
+<script src="assets/js/main.js" type="module"></script>
 </body>
 </html>
