--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </div>
 </div>
 
-<!-- <footer class="footer">
-    <a class="btn"><span>保存</span></a>
-</footer> -->
+<footer class="footer">
+    <a class="btn" data-act="save"><span>保存</span></a>
+</footer>
 
 <script src="assets/js/main.js" type="module"></script>
 </body>
